output_jobs_train_cycle/Result-gen_cycle_santacasa.1327.err
Traceback (most recent call last):
  File "/home/otto.tavares/public/iltbi/rxpixp2pixcycle/generate_synth.py", line 50, in <module>
    opt = TestOptions().parse()  # get test options
  File "/home/otto.tavares/public/iltbi/rxpixp2pixcycle/options/base_options.py", line 139, in parse
    opt = self.gather_options()
  File "/home/otto.tavares/public/iltbi/rxpixp2pixcycle/options/base_options.py", line 98, in gather_options
    model_option_setter = models.get_option_setter(model_name)
  File "/home/otto.tavares/public/iltbi/rxpixp2pixcycle/models/__init__.py", line 50, in get_option_setter
    model_class = find_model_using_name(model_name)
  File "/home/otto.tavares/public/iltbi/rxpixp2pixcycle/models/__init__.py", line 33, in find_model_using_name
    modellib = importlib.import_module(model_filename)
  File "/usr/lib/python3.9/importlib/__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1030, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1007, in _find_and_load
  File "<frozen importlib._bootstrap>", line 986, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 680, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 786, in exec_module
  File "<frozen importlib._bootstrap_external>", line 923, in get_code
  File "<frozen importlib._bootstrap_external>", line 853, in source_to_code
  File "<frozen importlib._bootstrap>", line 228, in _call_with_frames_removed
  File "/home/otto.tavares/public/iltbi/rxpixp2pixcycle/models/test2cycle_model.py", line 54
    setattr(self, 'netG_B' + opt.model_suffix, self.netG_B)  # store netG in self.
    ^
SyntaxError: invalid syntax
